2001-12-18  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/PyDO/sapdbapi.py: added file contributed by Ulrich Eck

2001-12-18  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/PyDO/postconn.py: fix from Gregory Brauer for setting string
	  attributes to None

2001-12-18  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (MultiFS): sketch of fs that mounts other fs'es, soon to replace the list of fses
	used by AE.

2001-12-14  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/PyDO/sapdbconn.py, pylibs/PyDO/sapdbgenscript.py, pylibs/PyDO/PyDBI.py: Added SAP database adaptor from Ulrich Eck

2001-12-12  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/swcgi.py.in: fixed content-length handling problem

2001-12-06  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/sessionHandler/Session.py (getSession): Added
	optional cookieParam keyword arguments, constrained to 'path', 'domain',
	and 'secure', for setting session cookie parameters at session creation time.
	They are otherwise ignored.
	
2001-12-02  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: added documentation of documentRootFS configuration
	variable, and comments on now (probably) deprecated pars service variables.

	* SkunkWeb/Services/templating/UrlBuilder.py (image): the <:img:>
	tag will now determine the width and height of the image if the url
	is local and PIL (Python Imaging Library) is installed, and neither
	height and width attributes have been specified in the tag.

	* pylibs/AE/Cache.py (_openDocRoot): added method that returns 
	an open file object.

2001-11-18  Jacob Smullyan  <smulloni@skunk.org>

	* skunkweb.spec: added spec for RPM.  probably doesn't work yet (I won't know
	until I make changes to the Makefiles to make the rpm use RPM_BUILD_ROOT, as
	don't feel like clobbering my installation!).

2001-11-17  Jacob Smullyan  <smulloni@skunk.org>

	* pylibs/AE/Executables.py (executableByTypes): added new mime types.
