@@ -1,26 +1,0 @@
-#  
-#  Copyright (C) 2001 Andrew T. Csillag <drew_csillag@geocities.com>
-#  
-#      This program is free software; you can redistribute it and/or modify
-#      it under the terms of the GNU General Public License as published by
-#      the Free Software Foundation; either version 2 of the License, or
-#      (at your option) any later version.
-#  
-#      This program is distributed in the hope that it will be useful,
-#      but WITHOUT ANY WARRANTY; without even the implied warranty of
-#      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#      GNU General Public License for more details.
-#  
-#      You should have received a copy of the GNU General Public License
-#      along with this program; if not, write to the Free Software
-#      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
-#   
-#wrapper since we used straight DateTime and then MAL moved it the mx
-#package
-import sys
-try:
-    import mx.DateTime
-    sys.modules['DateTime'] = mx.DateTime
-except:
-    print "You must install the egenix-mx-base package"
-    print "http://www.lemburg.com/files/python/eGenix-mx-Extensions.html#Download-mxBASE"
