@@ -1,3 +1,12 @@
+2001-12-20  Andrew Csillag  <drew@localhost.localdomain>
+
+	* pylibs/DateTime.py: removed
+
+	* SkunkWeb/mod_skunkweb/Makefile.in: fixed share dir permissions
+
+	* *many*: now will work with either old-style DateTime package
+	  or with new style mx.DateTime. 
+
 2001-12-18  Andrew Csillag  <drew@localhost.localdomain>
 
 	* pylibs/PyDO/sapdbapi.py: added file contributed by Ulrich Eck
